# nova-software-common

./: .gitignore  Cargo.toml  README.md  memory.x
common/: Cargo.toml
common/src/: lib.rs
common/src/config_format/: conversions.rs  frozen.rs  index.rs  mod.rs  reference.rs
common/src/control/: Cargo.toml  mod.rs
common/src/data-acquisition/: Cargo.toml  mod.rs
common/src/data-format/: Cargo.toml
common/src/data-format/src/: index.rs  lib.rs  reference.rs
common/src/data_acquisition/: mod.rs
common/src/data_format/: conversions.rs  index.rs  mod.rs  reference.rs
common/src/state_machine/: Cargo.toml  data.rs  executor.rs  mod.rs  state.rs  traits.rs
config-format/: Cargo.toml
config-format/src/: conversions.rs  frozen.rs  index.rs  lib.rs  reference.rs
data-format/: Cargo.toml  README.md
data-format/src/: lib.rs
flight/: Cargo.toml  README.md  toolchain.toml
flight/.cargo/: config.toml
flight/src/: main.rs
novafs-data-format/: Cargo.toml
novafs-data-format/src/: lib.rs
simulation/: Cargo.toml
src/: conversions.rs  frozen.rs  index.rs  lib.rs  reference.rs
