[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = { version = "0.7.7", features = ["serde"] }
cortex-m = "0.7.3"
stable_deref_trait = "1.2.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
alloc-traits = "0.1.1"

[features]
std = []
default = ["std"]
