[package]
name = "novafc-data-format"
version = "0.1.1"
edition = "2021"
authors = ["Troy Neubauer <troyneubauer@gmail.com> Luke Newcomb <newcomb.luke@protonmail.com>"]
repository = "https://github.com/ERFSEDS/nova-software-common"
readme = "README.md"
documentation = "https://docs.rs/novafc-data-format/"
description = "Data format used by the Nova Flight Computer"
license = "MIT"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[features]
std = ["serde/std"]
default = ["std"]
