[package]
name = "novafc-flight"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
heapless = "0.7.10"
fugit = "0.3.5"

shared-bus = "0.2.3"
mpu9250 = "0.24"
h3lis331dl = { git = "https://github.com/ERFSEDS/h3lis331dl.git" }

[dependencies.ms5611-spi]
version = "0.2.0"
default-features = false
features = ["ms5607"]

[dependencies.stm32f4xx-hal]
version = "0.12.0"
features = ["stm32f411"]
